--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="container page">
-    <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+    <div class="border-print-0 mb-5 pb-print-0 mb-print-1">
         <div class="row">
             <div class="col-print-6 col-12 col-md-4 d-flex justify-content-between flex-column">
                 <div>
@@ -50,7 +50,9 @@
         </div>
     </div>
 
-    <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+    <div id="border-dark-line"></div>
+
+    <div class="border-print-0 mb-5 pb-print-0 mb-print-1">
         <h2 class="mb-4">About Me.</h2>
         <div>
             <p>웹/앱 서비스 백엔드 개발과 스타트업 조직에서의 다양한 경험이 있습니다.
@@ -65,7 +67,9 @@
         </div>
     </div>
 
-    <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+    <div id="border-dark-line"></div>
+
+    <div class="border-print-0 mb-5 pb-print-0 mb-print-1">
         <h2 class="mb-4">Work Experience.</h2>
         
         <div class="row d-block d-md-flex{{#unless @last}} mb-5{{/unless}}">
@@ -80,8 +84,9 @@
             {{#each positions}}
             <div class="col-md-9">
                 <h3 class="fs-4 fw-normal">{{ title }}</h3>
-                <small>{{ period }}</small>
-
+                <p>
+                    <small>{{ period }}</small>
+                </p>
                 <p>
                     <strong>{{ problem }}</strong>
                     <div>{{{ markdown problem_contents }}}</div>
@@ -104,14 +109,15 @@
                     <span class="badge text-body border border-1">{{ this }}</span>
                     {{/each}}
                 </p>
+                <p class="col-12" style="height: 20px;"></p>
             </div>
-            <p class="col-12"></p>
             {{/each}}
         </div>
-        
     </div>
 
-    <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+    <div id="border-dark-line"></div>
+
+    <div class="border-print-0 mb-5 pb-print-0 mb-print-1">
         <h3 class="h2 screen mb-4">Skills.</h3>
         <div class="row align-items-center">
             {{#each skills}}
@@ -133,6 +139,8 @@
         </div>
     </div>
 
+    <div id="border-dark-line"></div>
+
     <h2 class="mb-4">Education & Additional Experience</h2>
 
     {{#each experience}}
@@ -149,7 +157,7 @@
     </div>
     {{/each}}
 
-    <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1"></div>
+    <div id="border-dark-line"></div>
 
 </div>
 </body>
