--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,8 +19,8 @@
         <div class="row">
             <div class="col-print-6 col-12 col-md-4 d-flex justify-content-between flex-column">
                 <div>
-                    <h1 class="mb-0">{{ name }}</h1>
-                    <div class="fs-3">{{ title }}</div>
+                    <h2 class="mb-0">{{ name }}</h1>
+                    <div class="fs-5">{{ title }}</div>
                 </div>
                 <div>
                     <p>
@@ -74,16 +74,18 @@
         
         <div class="row d-block d-md-flex{{#unless @last}} mb-5{{/unless}}">
             <div class="col-md-12">
-                <h3>노다멘 | <samp>2020.12 - 2023.08</samp></h3>
-                <h4>Software Engineer</h4>
-                <a href="https://patron.digital/ko/home">
-                    <span>https://patron.digital/ko/home</span>
-                </a>
+                <h5>노다멘 | <samp>2020.12 - 2023.08</samp></h5>
+                <strong>Software Engineer</strong>
+                <p>
+                    <a href="https://patron.digital/ko/home">
+                        <span>https://patron.digital/ko/home</span>
+                    </a>
+                </p>
                 <p class="col-12"></p>
             </div>
             {{#each positions}}
             <div class="col-md-9">
-                <h3 class="fs-4 fw-normal">{{ title }}</h3>
+                <h5 class="fs-4 fw-normal"><b>{{ title }}</b></h5>
                 <p>
                     <small>{{ period }}</small>
                 </p>
