feat(templates): font 수정

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -86,7 +86,7 @@
             {{#each positions}}
             <div class="col-md-9">
                 <p>
-                    <strong class="fs-5 fw-normal">{{ title }}</strong>
+                    <strong class="fs-5">{{ title }}</strong>
                     <small>{{ period }}</small>
                 </p>
                 <p>
@@ -143,7 +143,7 @@
 
     {{#each experience}}
     <div class="mb-4">
-        <samp class="fw-normal">{{ header }}</s>
+        <strong>{{ header }}</strong>
         <p class="fw-normal">
             {{{ markdown contents }}}
         </p>
