--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -56,13 +56,13 @@
         <h3 class="mb-4">About Me.</h3>
         <div>
             <p>웹/앱 서비스 백엔드 개발자로서 스타트업 조직에서의 다양한 경험이 있습니다.
-                Java & Spring framework, MySQL, Azure를 주로 사용하여 설계, 개발, 운영까지 담당하여 B2C 회사 상용 서비스를 1년간 운영해본 경험이 있습니다.</p>
+                Java & Spring framework, MySQL, Azure를 주로 사용해 설계, 개발, 운영까지 담당하여 B2C 회사 상용 서비스를 1년간 운영해본 경험이 있습니다.</p>
 
             <p>개발하며 경험한 오류를 분석하고 재밌는 발견들을 포스팅하고 있습니다.
                 현재는 더 나은 코드, 더 나은 방법을 알기 위해 개인 프로젝트나 CS 전공지식을 GitHub에 재정리하는 경험을 즐기고 있습니다.</p>
 
             <p>개발이란 비즈니스와의 연결이 중요하다고 생각합니다. 좋은 연결을 위해서 이해관계자들과 적극적으로 의사소통하고 문제를 해결하기 위해 뛰어듭니다.
-                회사에 도움이 되는 연결과 포기할줄 아는 용기를 가진 개발자로서 성장하기 위해 조금 더 학습하고, 경험하는 매일을 살고 있습니다.</p>
+                회사에 도움이 되는 연결과 포기할줄 아는 용기를 가진 개발자로 성장하기 위해 조금 더 학습하고, 경험하는 매일을 살고 있습니다.</p>
         </div>
     </div>
 
