--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -106,7 +106,16 @@ h1, h2, h3, h4 {
     letter-spacing: 0.05rem;
 }
 
+.col-md-9 {
+    padding: 0 0 1rem 0;
+}
+
+.col-md-10 {
+    padding: 0 0 1rem 0;
+}
+
 @media print {
+
     .col-print-1 {
         flex: 0 0 8.333333%;
         max-width: 8.333333%;
