--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -58,11 +58,11 @@
             <p>웹/앱 서비스 백엔드 개발자로서 스타트업 조직에서의 다양한 경험이 있습니다.
                 Java & Spring framework, MySQL를 주로 사용해 설계, 개발 담당하여 B2C 회사 상용 서비스를 1년간 운영해본 경험이 있습니다.</p>
 
-            <p>개발하며 경험한 오류를 분석하고 재밌는 발견들을 포스팅하고 있습니다.
-                현재는 더 나은 코드, 더 나은 방법을 알기 위해 개발 서적을 읽고 정리하며 코드리뷰를 경험하고 있습니다.</p>
+            <p>regacy 쿼리를 분석해 성능 지표를 보고 병목 현상을 해결하였고, 기존에 웹/앱으로 개발되어있던 예술감상 서비스 백(back)단 언어를
+                PHP에서 JAVA로 전환해 regacy를 청산하였습니다.
+                또한, 빌드/배포 프로세스 비용을 줄이기 위해 Azure Pipelines를 사용해 자동화를 구축하여 기존 90분에 소요시간을 5분으로 줄일 수 있었습니다.</p>
 
-            <p>개발이란 비즈니스와의 연결이 중요하다고 생각합니다. 좋은 연결을 위해서 이해관계자들과 적극적으로 의사소통하고 문제를 해결하기 위해 뛰어듭니다.
-                회사에 도움이 되는 연결과 포기할줄 아는 용기를 가진 개발자로 성장하기 위해 조금 더 학습하고, 경험하는 매일을 살고 있습니다.</p>
+            <p>프로그램의 예외상황을 줄이고 유지보수성을 높이기 위해 단위 테스트를 작성하였고 더 효과적인 API 개발을 위해 공부하고 있습니다.</p>
         </div>
     </div>
 
