--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -60,9 +60,9 @@
 
             <p>저는 문제 해결에 대한 능동적인 접근과 적극적인 팀워크를 통해 성과를 달성한 경험이 있습니다.
                 프로젝트 초기 단계에서 발생한 기술적 장애물에 대해, 단순히 문제를 지적하는데 그치지 않고, 원인 분석을 주도하고 팀원들과 함께 실질적인 해결책을 마련했습니다.
-                제안한 해결책이 적용된 후, 프로젝트 일정을 보다 빠르게 맞출 수 있었고 사용자들에게 3초 이하로 랜딩되는 페이지를 보여줄 수 있었습니다.</p>
+                제안한 해결책이 적용된 후, 프로젝트 일정을 보다 빠르게 맞출 수 있었고 사용자들에게 3초 이하로 랜딩되는 페이지를 보여주어 DAU 300을 달성할 수 있었습니다.</p>
 
-            <p>또한, 팀원들과의 정기적인 소통을 통해 개발 사이클에 낭비시간을 분석해 개선하였고, 프로젝트 전반적인 효율성을 증대시켰습니다.</p>
+            <p>또한, 팀원들과의 정기적인 소통을 통해 개발 사이클에 낭비시간을 분석해 개선하였고, 프로젝트 전반적인 효율성을 높였습니다.</p>
         </div>
     </div>
 
