--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -58,12 +58,12 @@
             <p>
                 웹/앱 서비스 백엔드 개발자로서 스타트업 조직에서의 다양한 경험이 있습니다.
                 Java & Spring framework, MySQL을 주로 사용하여 미술 B2C 서비스와 헬스케어 CRM 솔루션의 설계와 개발을 담당하였습니다.
-                이 과정에서 사용자 요구를 충족시키기 위한 실질적인 기술적 해결책을 제공하며 프로젝트를 성공적으로 운영해본 경험이 있습니다.
+                이 과정에서 사용자 요구를 충족시키기 위한 실질적인 기술적 해결책을 제공하며 프로젝트를 운영해본 경험이 있습니다.
             </p>
 
             <p>
-                문제 해결에 대한 능동적인 접근과 적극적인 팀워크를 통해 성과를 달성한 경험이 있습니다.
-                프로젝트 초기 단계에서 데이터베이스 성능 문제와 빌드/배포 자동화의 필요성이 대두되었을 때, 단순히 문제를 지적하는 데 그치지 않고, 원인 분석을 주도하고 팀원들과 협력하여 해결책을 제안했습니다.
+                문제 해결에 대한 능동적인 접근과 적극적인 팀워크를 통해 성과를 달성했습니다.
+                프로젝트 초기 단계에서 데이터베이스 성능 문제와 자동화의 필요성이 대두되었을 때, 단순히 문제를 지적하는 데 그치지 않고, 원인 분석을 주도하고 팀원들과 협력하여 해결책을 제안했습니다.
                 제안한 해결책은 빌드/배포 자동화, 데이터베이스 쿼리 최적화 및 데이터 모델 리팩토링을 포함하였고, 이를 통해 프로젝트 일정을 빠르게 맞출 수 있었으며, DB 구조적 문제를 해결하여 사용자들에게 3초 이하로 랜딩되는 페이지를 제공할 수 있었습니다.
                 이 성과는 DAU 300을 달성하게 하였으며, 이는 사용자 경험의 현저한 향상과 비즈니스 목표 달성에 중요한 기여를 하였습니다.
             </p>
@@ -71,7 +71,7 @@
             <p>
                 또한, 팀원들과의 정기적인 소통을 통해 개발 사이클의 낭비 시간을 분석하고, 개발 프로세스의 효율을 높이는 방안을 도출했습니다.
                 주간 스크럼 회의를 통해 개발 진행 상황을 공유하고, 코드 리뷰와 피드백 세션을 정기적으로 실시하여 전체 프로젝트의 품질과 속도를 개선하였습니다.
-                이러한 접근 방식은 팀 전체의 협업을 강화하고 프로젝트의 전반적인 효율성을 높이는 데 크게 기여했습니다.
+                이러한 접근 방식은 팀 전체의 협업을 강화하고 프로젝트의 전반적인 효율성을 높이는 데 크게 기여할 수 있었습니다.
             </p>
         </div>
     </div>
