[RESUME/240822] education 폼 변경

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -235,15 +235,15 @@
 
     <div id="border-dark-line"></div>
 
-    <h3 class="mb-4">Education</h3>
+    <h3 class="mb-4">Education.</h3>
 
     {{#each experience}}
     <div class="col-md-2">
         {{ period }}
     </div>
     <div class="col-md-10">
-        <h3>{{ header }}</h3>
-        <p>{{ contents }}</p>
+        <h5><strong>{{ header }}</strong></h5>
+        <small>{{ contents }}</small>
     </div>
     {{/each}}
 
