--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -64,7 +64,7 @@
             <p>
                 프로젝트 초기 단계에서 데이터베이스 성능 문제와 자동화의 필요성이 대두되었을 때, 단순히 문제를 지적하는 데 그치지 않고, 원인 분석을 주도하고 팀원들과 협력하여 해결책을 제안했습니다.
                 제안한 해결책은 빌드/배포 자동화, 데이터베이스 쿼리 최적화 및 데이터 모델 리팩토링을 포함하였고, 이를 통해 프로젝트 일정을 빠르게 맞출 수 있었으며, DB 구조적 문제를 해결하여 사용자들에게 3초 이하로 랜딩되는 페이지를 제공할 수 있었습니다.
-                이 성과는 DAU 300을 달성하게 하였으며, 이는 사용자 경험의 향상과 비즈니스 목표 달성에 중요한 기여를 하였습니다.
+                이 성과는 DAU 300을 달성하게 하였으며, 이는 사용자 경험의 향상과 비즈니스 목표 달성에 기여 했습니다.
             </p>
 
             <p>
@@ -91,7 +91,7 @@
                     </strong>
                     <ul>
                         <li>CS 학습 및 algorithm 문제풀이</li>
-                        <li>관심있던 기술스택 사용한 개인 프로젝트 (Redis, Unit Test, WebSocket)</li>
+                        <li>관심있던 기술을 사용해 Side Project (Redis, Unit Test, Refactoring)</li>
                     </ul>
                 </div>
             </div>
